--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <footer>
         <div class="footer-content">
             <div>
-                <p>This site was built by <img src="" alt=""> All funds used to pay for this site went to HebronSoft’s charity that teaches orphans in Ukraine to learn coding skills as preparation for lifelong fulfilling careers.</p>
+                <p>This site was built by All funds used to pay for this site went to HebronSoft’s charity that teaches orphans in Ukraine to learn coding skills as preparation for lifelong fulfilling careers.</p>
                 <button>Learn more</button>
             </div>
             <div>
@@ -91,7 +91,7 @@
             </div>
             <div>
                 <h6>Would you like to suggest an improvement to this site?</h6>
-                <textarea name="" id="" cols="30" rows="10" placeholder="Massage"></textarea>
+                <textarea cols="30" rows="10" placeholder="Massage"></textarea>
                 <button>Send</button>
             </div>
         </div>
