created burger menu

--- a/index.html
+++ b/index.html
@@ -9,14 +9,23 @@
 </head>
 <body>
     <header>
-        <ul>
-            <li>Home</li>
-            <li>Volunteer Your Time</li>
-            <li>Offer Your Talent</li>
-            <li>Donate Your Useful Goods</li>
-            <li>Share What`s Up</li>
-            <li>Inspire Others</li>
-        </ul>
+        <nav>
+          <div class="burger-menu burger-menu_active">
+            <a href="#" class="burger-menu__button">
+              <span class="burger-menu__lines"></span>
+            </a>
+          </div>
+          <div class="ul-menu">
+            <ul>
+                <li><a href="#" class="menu-tag">Home</a></li>
+                <li><a href="#" class="menu-tag">Volunteer Your Time</a></li>
+                <li><a href="#" class="menu-tag">Offer Your Talent</a></li>
+                <li><a href="#" class="menu-tag">Donate Your Useful Goods</a></li>
+                <li><a href="#" class="menu-tag">Share What`s Up</a></li>
+                <li><a href="#" class="menu-tag">Inspire Others</a></li>
+            </ul>
+          </div>
+        </nav>
     </header>
     <section class="home-page-banner">
         <h1>Volunteer Centre County</h1>
@@ -24,7 +33,6 @@
         <p>A site dedicated to sharing, inspring, and connectiong volunteers
         to build a stronger Centre County</p>
     </section>
-
     <section class="our-community-partners">
         <h4>Our community partners</h4>
         <div class="community-partners-slider">
